--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name='description' content='Tweede Kamer' />
+
+        <title>Tweede Kamer door de jaren heen</title>
+
         <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
         <link rel="icon" type='image/x-icon' href="%sveltekit.assets%/favicon.ico" />
